fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -58,113 +58,110 @@ margin: 0;
 
 
 @media screen and (max-width: 768px) {
-.logo {
-  width: 80vw;
-}
-
-.chatbot {
-    width: 90%;
-    height: calc(var(--vh, 1vh) * 90);
-    float: left;
+  .logo {
+    width: 80vw;
   }
 
-.hamburger{
-  display: inline-block;
-  width: 10%;
-  height: 90%;
-  float: right;
-}
-.container {
-  display: inline-block;
-  cursor: pointer;
-  margin: auto;
-}
+  .chatbot {
+      width: 90%;
+      height: calc(var(--vh, 1vh) * 90);
+      float: left;
+    }
 
-.bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: #333;
-  margin: 6px 0;
-  transition: 0.4s;
-}
+  .hamburger{
+    display: inline-block;
+    width: 10%;
+    height: 90%;
+    float: right;
+  }
+  .container {
+    display: inline-block;
+    cursor: pointer;
+    margin: auto;
+  }
 
-/* Rotate first bar */
-.change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-  transform: rotate(-45deg) translate(-9px, 6px) ;
-}
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
 
-/* Fade out the second bar */
-.change .bar2 {
-  opacity: 0;
-}
+  /* Rotate first bar */
+  .change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-9px, 6px) ;
+  }
 
-/* Rotate last bar */
-.change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-  transform: rotate(45deg) translate(-8px, -8px) ;
-}
+  /* Fade out the second bar */
+  .change .bar2 {
+    opacity: 0;
+  }
 
-.newsfeed {
-  height: 100%; /* 100% Full-height */
-  height: calc(var(--vh, 1vh) * 100);
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-}
+  /* Rotate last bar */
+  .change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
+  }
 
-.newsfeed .closebtn {
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
+  .newsfeed {
+    height: 95%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 5vw; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+  }
 
-/* The navigation menu links */
-.newsfeed a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
+  .newsfeed .closebtn {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
 
-/* When you mouse over the navigation links, change their color */
-.newsfeed a:hover {
-  color: #f1f1f1;
-}
+  /* The navigation menu links */
+  .newsfeed a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
 
-.newscard {
-  background: rgba(255, 255, 255, 0.8);
-  border-bottom-left-radius:2%;
-  border-bottom-right-radius:2%;
-  width: 80vw;
-  width: calc(var(--vw, 1vw) * 80);
-  height: 40vw;
-  height: calc(var(--vw, 1vw) * 40);
-  overflow: hidden;
-  text-align:center;
-  margin: 2vw auto;
-  font-size: 2vw;
-}
+  /* When you mouse over the navigation links, change their color */
+  .newsfeed a:hover {
+    color: #f1f1f1;
+  }
 
-.newscard img{
-  width: 80vw;
-  height: 24vw;
-}
+  .newscard {
+    background: rgba(255, 255, 255, 0.8);
+    border-bottom-left-radius:2%;
+    border-bottom-right-radius:2%;
+    width: 80vw;
+    width: calc(var(--vw, 1vw) * 80);
+    height: 40vw;
+    height: calc(var(--vw, 1vw) * 40);
+    overflow: hidden;
+    text-align:center;
+    margin: 2vw auto;
+    font-size: 2vw;
+  }
 
-
+  .newscard img{
+    width: 80vw;
+    height: 24vw;
+  }
 
 
 }
